@@ -1,3 +1,8 @@
+2019-03-20  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/71861
+	* gfortran.dg/interface_abstract_5.f90: New test case.
+
 2019-03-20  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/89775
