@@ -1,3 +1,9 @@
+2019-03-20  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/71861
+	* symbol.c (check_conflict): ABSTRACT attribute conflicts with
+	INTRINSIC attribute.
+
 2019-03-18  Thomas Koenig  <tkoeng@gcc.gnu.org>
 
 	PR fortran/68009
